added security against xss

--- a/profile.html
+++ b/profile.html
@@ -22,6 +22,15 @@
     </div>
     <div id="content">
       <div id="addCard">
+        <div class="AddCardAlert alert">
+          Invalid Data
+          <span
+            class="closebtn"
+            onclick="this.parentElement.style.display='none';"
+          >
+            &times;
+          </span>
+        </div>
         <button id="closeForm" class="button">Close</button>
         <form id="addCardForm">
           <input
@@ -29,12 +38,14 @@
             id="cardHolder"
             class="input"
             name="cardholder"
+            required
             placeholder="Card Holder Name"
           />
           <input
             type="text"
             id="cardNum"
             class="input"
+            required
             name="cardnumber"
             placeholder="Card Number"
           />
@@ -42,6 +53,7 @@
             type="text"
             id="phoneNum"
             class="input"
+            required
             name="phonenumber"
             placeholder="Contact Number"
           />
@@ -53,6 +65,7 @@
           <input
             type="password"
             class="input"
+            required
             id="cvv"
             name="cvv"
             placeholder="CVV"
